--- a/views/header.mustache
+++ b/views/header.mustache
@@ -1,6 +1,19 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+
+  <!-- BootStrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 <style>
 * {
   box-sizing: border-box;
@@ -8,8 +21,6 @@
 
 body {
   font-family: Roboto, verdana ;
-  /* padding: 10px; */
-  /* background: #f1f1f1; */
 }
 
 /* Header/Blog Title */
@@ -125,11 +136,36 @@ th {
     width: 100%;
   }
 }
+
+input[type=radio] {
+  display: none;
+}
+
+input[type=radio] + img {
+  opacity: 0.4;
+  /* border: 1px solid black; */
+}
+
+input[type=radio] + img:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+input[type=radio] + img:active {
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+input[type=radio]:checked + img {
+  border: 2px solid black;
+  opacity: 1.0;
+}
+
 </style>
 <title>Truepool Carpool</title>
 </head>
 <body>
 
 <div class="header">
-  <h1>Truepool Carpool</h1>
+  <a href="/home"><img src="./views/logo.gif" /></a>
 </div>
