--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -5,21 +5,35 @@
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>Sign up for an account</h2>
-      
-      <p>Enter a username and password below to signup.</p>
+      <h2>Create an account</h2>
       <p style="color:red;">{{ signup_error }}</p>
       <p>{{{ signup_success }}}</p>
       <form action="/signup/attemptsignup" method="post">
-        <label for="username">Username:</label>
-        <input type="text" name="username"> <br /> <br />
-        <label for="password">Password:</label>
-        <input type="text" name="password"> <br /> <br />
-		<label for="email">Email Address:</label>
-        <input type="text" name="email"> <br /> <br />
-		<label for="email">Phone Number:</label>
-        <input type="text" name="phonenumber"> <br /> <br />
-        <input type="submit" value="Signup">
+
+        <input type="text" class="form-control" id="username-create" name="username" placeholder="Username" required autofocus pattern="[a-z0-9_]{0,}" title="Only characters, numbers and underscores are allowed"/><br />
+
+        <!-- Secure password -->
+        <!-- <input type="password" class="form-control" id="password-create" name="password" placeholder="Password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Minimum 8 characters long. At least 1 uppercase, 1 lowercase, and 1 number"/><br /> -->
+
+        <!-- Unsecure password (for testing) -->
+        <input type="password" class="form-control" id="password-create" name="password" placeholder="Password" required pattern="[a-z0-9_]{0,}" title="Only characters, numbers and underscores are allowed"/><br />
+        <input type="password" class="form-control" id="password-confirm" name="passwordConfirm" placeholder="Password Confirm" required/><br />
+        <input type="text" class="form-control" id="name" name="name" placeholder="Name" required pattern="[A-Za-z ]{0,}" title="Only characters and spaces are allowed"/><br />
+        <input type="email" class="form-control" id="email-address" name="email" placeholder="Email Address" required/><br />
+
+        <label>
+        <input type="radio" name="role" value="Driver" checked>
+          <img src="./views/Driver.gif" width="150px" />
+        </label>&nbsp;&nbsp;&nbsp;
+
+        <label>
+        <input type="radio" name="role" value="Rider" />
+          <img src="./views/Rider.gif" width="150px" />
+        </label><br /><br />
+
+        <input type="submit" class="btn btn-success" id="sign-submit" value="Submit">
+        <a href="/login"><input type="button" class="btn btn-danger" id="login-screen" value="Back"/></a>
+      </form>
 
       </form> <br />
     </div>
