--- a/views/login.mustache
+++ b/views/login.mustache
@@ -5,10 +5,10 @@
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <div>
-        Driver test: mem1 / password
-        Rider test: mem2 / password
-      </div>
+      <p>
+        Driver test: mem1 / password<br />
+        Rider test: mem2 / password<br />
+      </p>
       <h2>Login</h2>
       <p style="color:red;">{{ login_error }}</p>
       <form action="/login/attemptlogin" method="post">
