--- a/views/navigation.mustache
+++ b/views/navigation.mustache
@@ -8,9 +8,9 @@
     <a href="/login/logout">Logout</a>
   {{/displaylogout}}
   <a href="/members" {{#membersnav}}class="curnav"{{/membersnav}}>Travel</a>
-  <!-- <a href="/articles" {{#articlesnav}}class="curnav"{{/articlesnav}}>Trips</a> -->
+  <!-- <a href="/articles" {{#articlesnav}}class="curnav"{{/articlesnav}}>Trips</a>
   {{#displayAdmin}}
   <a href="/editors" {{#editorsnav}}class="curnav"{{/editorsnav}}>Admin</a>
-  {{/displayAdmin}}
+  {{/displayAdmin}} -->
 
 </div>
