--- a/views/home.mustache
+++ b/views/home.mustache
@@ -6,7 +6,7 @@
   <div class="leftcolumn">
     <div class="card">
       <h2>Home</h2>
-      <p>The objective is to develop a web application where drivers can post their travel information and their preferences on carpooling, and riders can request a ride. Conversely, riders can post their travel and drivers can offer a ride. This application will be hosted on a private cloud and will use a server-client model for communication.</p>
+      <p>Everthing is evolving so should how we travel. As a driver, we wasted our car seats for nothing. As a rider, we wasted our time to get to a place. Now these are over. You can save the Earth and make money by taking people, or you can relax while somebody drives you to the exact place where you want to be.</p>
     </div>
   </div>
 
