--- a/views/login.mustache
+++ b/views/login.mustache
@@ -1,10 +1,9 @@
 {{>header}}
 
-{{>navigation}}
-
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
+    <p>Everthing is evolving so should how we travel. As a driver, we wasted our car seats for nothing. As a rider, we wasted our time to get to a place. Now these are over. You can save the Earth and make money by taking people, or you can relax while somebody drives you to the exact place where you want to be.</p>
       <p>
         Driver test: mem1 / password<br />
         Rider test: mem2 / password<br />
