--- a/views/header.mustache
+++ b/views/header.mustache
@@ -100,7 +100,7 @@
       }
 
       #logo {
-        width: 90%;
+        width: 400px;
       }
     }
 
@@ -146,5 +146,5 @@
 <body>
 
   <div class="header">
-    <a href="/home"><img id="logo" src="./views/logo.gif" /></a>
+    <a href="/"><img id="logo" src="./views/logo.gif" /></a>
   </div>
