--- a/views/navigation.mustache
+++ b/views/navigation.mustache
@@ -1,16 +1,16 @@
-<div class="topnav">
+<!-- <div class="topnav"> -->
 
-  <a href="/home" {{#homenav}}class="curnav"{{/homenav}}>Home</a>
-  {{#displaylogin}}
-  <a href="/login" {{#loginnav}}class="curnav"{{/loginnav}}>Login</a>
-  {{/displaylogin}}
-  {{#displaylogout}}
-    <a href="/login/logout">Logout</a>
-  {{/displaylogout}}
-  <a href="/members" {{#membersnav}}class="curnav"{{/membersnav}}>Travel</a>
+  <!-- <a href="/home" {{#homenav}}class="curnav"{{/homenav}}>Home</a> -->
+  <!-- {{#displaylogin}} -->
+  <!-- <a href="/login" {{#loginnav}}class="curnav"{{/loginnav}}>Login</a> -->
+  <!-- {{/displaylogin}} -->
+  <!-- {{#displaylogout}} -->
+    <!-- <a href="/login/logout">Logout</a> -->
+  <!-- {{/displaylogout}} -->
+  <!-- <a href="/members" {{#membersnav}}class="curnav"{{/membersnav}}>Travel</a> -->
   <!-- <a href="/articles" {{#articlesnav}}class="curnav"{{/articlesnav}}>Trips</a>
   {{#displayAdmin}}
   <a href="/editors" {{#editorsnav}}class="curnav"{{/editorsnav}}>Admin</a>
   {{/displayAdmin}} -->
 
-</div>
+<!-- </div> -->
