--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -7,7 +7,7 @@
       <p>This page is for users to request or offer rides</p>
       <p><strong>{{ message }}</strong></p>
       <h3>Route</h3>
-      <form action="/members/create" method="post">
+      <form action="/submitRoute" method="post">
         <label for="title">Title:</label>
         <input type="radio" id="offer" name="ridetype" value="offer">
         <label for="ridetype">offer</label><br>
