Serialized travel.js:

--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -11,12 +11,12 @@
 
 				<!-- This is to decide what ridetype the user is choosing -->
 				<label>
-					<input type="radio" id="offer" name="ridetype" value="offer">
+					<input type="radio" id="offer" name="ridetype" value="offer"checked>
 					<img src="./views/Driver.gif" width="150px" />
 				</label>&nbsp;&nbsp;&nbsp;
 
 				<label>
-					<input type="radio" id="request" name="ridetype" value="request" checked>
+					<input type="radio" id="request" name="ridetype" value="request" >
 					<img src="./views/Rider.gif" width="150px" />
 				</label><br /><br />
 
