--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -3,6 +3,7 @@
 <div class="row">
 	<div class="leftcolumn">
 		<div class="card">
+			{{>notification}}
 			<h2>Trip routes</h2>
 			<p>This page is for users to request or offer rides</p>
 			<p><strong>{{ message }}</strong></p>
@@ -95,7 +96,7 @@ console.log(d2);
 
 
 if (h=n.getHours()<12)
-{	
+{
 
 h="0"+(n.getHours());
 
@@ -117,12 +118,12 @@ else
 
 
 
-	
-	
-	
+
+
+
 	console.log(h);
-	
-	
+
+
 	 $('#date').val(y + "-" + m2 + "-" + d2);
 	  $('#time').val(h+":"+mm);
 	var map;
