Added function to add to database; started on the trip.js section.

--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -31,19 +31,19 @@
 				<label for="startlong">start longitude</label>
 				<input id="startlong" name="startlong" type="text"><br>
 
-				<label for="startlong">start latitude</label>
+				<label for="startlat">start latitude</label>
 				<input id="startlat" name="startlat" type="text"><br>
 
 
 
 				<div id="endSearchContainer" class="form-group">
-					<label for="endLocationSearch">End Location</label>
-					<input name="endingloc" type="text" class="form-control" id='endSearchBox' placeholder="End Location">
+				<label for="endLocationSearch">End Location</label>
+				<input name="endingloc" type="text" class="form-control" id='endSearchBox' placeholder="End Location">
 				</div>
 				<label for="endlong">End longitude</label>
 				<input id="endlong" name="endlong" type="text"><br>
 
-				<label for="endlong">End latitude</label>
+				<label for="endlat">End latitude</label>
 				<input id="endlat" name="endlat" type="text"><br>
 				<input type="date" id="date" name="date" placeholder="YYYY/MM/DD" required >
 				<input type="time" id="time" name="time" required>
