--- a/views/login.mustache
+++ b/views/login.mustache
@@ -12,7 +12,7 @@
       <p style="color:red;"><strong>{{ login_error }}</strong></p>
       <p style="color:green;"><strong>{{ login_ready }}</strong></p>
       <form action="/login/attemptlogin" method="post">
-        <input type="text" class="form-control" placeholder="Username" name="username" required autofocus autocomplete="on" pattern="[a-zA-Z0-9_]{0,}" title="Only characters, numbers and underscores are allowed"/><br />
+        <input type="text" class="form-control" placeholder="Username" name="username" required autofocus autocapitalize="off" autocomplete="on" pattern="[a-z0-9_]{0,}" title="Only lowercase characters, numbers and underscores are allowed"/><br />
         <input type="password" class="form-control" placeholder="Password" name="password" required />
         <br />
         <input type="submit" class="btn btn-primary" value="Sign in"><br /><br />
