Fix Travel form to make all fields are required, and change the style a bit

--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -23,31 +23,24 @@
 
 				<div id="startSearchContainer" class="form-group">
 					<label for="starLocationSearch">Start Location</label>
-					<input name="startingloc" type="text" class="form-control" id='startSearchBox' placeholder="Start Location">
+					<input name="startingloc" type="text" class="form-control" id='startSearchBox' placeholder="Start Location" required autofocus autocomplete="on" >
 				</div>
 
-
 				<!-- hide this when we go live -->
-				<label for="startlong">start longitude</label>
-				<input id="startlong" name="startlong" type="text"><br>
-
-				<label for="startlat">start latitude</label>
-				<input id="startlat" name="startlat" type="text"><br>
-
-
+				start longitude: <span id="startlong" name="startlong"></span><br />
+				start latitude: <span id="startlat" name="startlat"></span><br /><br />
 
 				<div id="endSearchContainer" class="form-group">
 				<label for="endLocationSearch">End Location</label>
-				<input name="endingloc" type="text" class="form-control" id='endSearchBox' placeholder="End Location">
+				<input name="endingloc" type="text" class="form-control" id='endSearchBox' placeholder="End Location" required autocomplete="on" >
 				</div>
-				<label for="endlong">End longitude</label>
-				<input id="endlong" name="endlong" type="text"><br>
 
-				<label for="endlat">End latitude</label>
-				<input id="endlat" name="endlat" type="text"><br>
-				<input type="date" id="date" name="date" placeholder="YYYY/MM/DD" required >
-				<input type="time" id="time" name="time" required>
-				<input value="Submit" type="submit" />
+				end longitude: <span id="endlong" name="endlong"></span><br />
+				end latitude: <span id="endlat" name="endlat"></span><br /><br />
+
+				<input type="date" id="date" name="date" placeholder="YYYY/MM/DD" required>
+				<input type="time" id="time" name="time" required><br /><br />
+				<input class="btn btn-primary" value="Submit" type="submit">
 			</form>
 			<br />
 
@@ -65,6 +58,7 @@
 	</div>
 </div>
 <script>
+
 	//console.log(Date());
 	n =  new Date();
 y = n.getFullYear();
@@ -152,8 +146,8 @@ else
 		map.entities.push(pushpin);
 		console.log("Lat:" + locationSuggestion.location.latitude);
 		console.log("Long:" + locationSuggestion.location.longitude);
-		$('#startlong').val(locationSuggestion.location.longitude);
-		$('#startlat').val(locationSuggestion.location.latitude);
+		$('#startlong').html(locationSuggestion.location.longitude);
+		$('#startlat').html(locationSuggestion.location.latitude);
 	}
 
 	function suggestionSelectedend(locationSuggestion) {
@@ -165,8 +159,8 @@ else
 		map.entities.push(pushpin);
 		console.log("eLat:" + locationSuggestion.location.latitude);
 		console.log("eLong:" + locationSuggestion.location.longitude);
-		$('#endlong').val(locationSuggestion.location.longitude);
-		$('#endlat').val(locationSuggestion.location.latitude);
+		$('#endlong').html(locationSuggestion.location.longitude);
+		$('#endlat').html(locationSuggestion.location.latitude);
 	}
 </script>
 <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=Aj2GRDYK72ehSn2kZNlHiGmrB2JSs504JcX0hAEBhCdDL1TOpAjouqPKwrgbsKK7' async defer></script>
