--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -27,24 +27,24 @@
 				</div>
 
 				<!-- hide this when we go live -->
-				
+
 				<label for="startlong">start longitude</label>
-				<input id="startlong" name="startlong" type="text"><br>
+				<input id="startlong" name="startlong" type="text"><br />
 
 				<label for="startlat">start latitude</label>
-				<input id="startlat" name="startlat" type="text"><br>
+				<input id="startlat" name="startlat" type="text"><br />
 
 				<div id="endSearchContainer" class="form-group">
 				<label for="endLocationSearch">End Location</label>
 				<input name="endingloc" type="text" class="form-control" id='endSearchBox' placeholder="End Location" required autocomplete="on" >
 				</div>
-				
+
 				<!-- hide this when we go live -->
 				<label for="endlong">End longitude</label>
-				<input id="endlong" name="endlong" type="text"><br>
+				<input id="endlong" name="endlong" type="text"><br />
 
 				<label for="endlat">End latitude</label>
-				<input id="endlat" name="endlat" type="text"><br>
+				<input id="endlat" name="endlat" type="text"><br /><br />
 
 				<input type="date" id="date" name="date" placeholder="YYYY/MM/DD" required>
 				<input type="time" id="time" name="time" required><br /><br />
