fix location search field bigger than the card

--- a/views/header.mustache
+++ b/views/header.mustache
@@ -55,7 +55,10 @@
     .card {
       background-color: white;
       padding: 20px;
-      margin-top: 20px;
+    }
+
+    #startSearchBox, #endSearchBox {
+      width: 96%;
     }
 
     /* Clear floats after the columns */
