--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -20,9 +20,9 @@
 					<img src="./views/Rider.gif" width="150px" />
 				</label><br /><br />
 
-				<div id="startSearchContainer" class="form-group">
+				<div id="startSearchContainer" class="form-group" >
 					<label for="starLocationSearch">Start Location</label>
-					<input name="startingloc" type="text" class="form-control" id='startSearchBox' placeholder="Start Location" required autofocus autocomplete="on" >
+					<input type="text" name="startingloc" class="form-control" id='startSearchBox' placeholder="Start Location" required autofocus autocomplete="on" />
 				</div>
 
 				<!-- hide this when we go live -->
