--- a/views/trip.mustache
+++ b/views/trip.mustache
@@ -2,15 +2,21 @@
 <div class="row">
 	<div class="leftcolumn">
 		<div class="card">
-			{{>notification}}
 
-			Fastest ID: <span id="fastestid"></span>
 			<p><strong>{{ message }}</strong></p>
 			<h2>Active Trip Details</h2>
 			<p>This page is to create a connection to the application and wait for a successful match.</p>
 			<p><strong>Here are your trip details!</strong></p>
+			<p>Your User ID: <span id="userid">{{ userid }}</span></p>
 			<p>Your Ride ID: <span id="rideid">{{ rideid }}</span></p>
 		 <p>You are {{ ridetype }}ing a ride.</p>
+
+		 <p><strong>You are matched with:</strong></p>
+	   <p>Fastest ID: <span id="fastestid"></span></p>
+		 <p>First Name: <span id="fname"></span></p>
+		 <p>Last Name: <span id="lname"></span></p>
+		 <p>Phone Number: <span id="phonenumber"></span></p>
+
 		<strong>Start: </strong>{{ startloc }}
 
 		<strong>Destination:</strong> {{ endloc }}
@@ -41,10 +47,13 @@
   //    {
       //  $("#question").html(ques);
 	  //    });
-
+		var socket = io()
 			socket.on("fastesttrip", function(ftrip)
 		     {
 		       $("#fastestid").html(ftrip.fastesttripid);
-					
+					 $("#fname").html(ftrip.fastestfname);
+					 $("#lname").html(ftrip.fastestlname);
+					 $("#phonenumber").html(ftrip.fastestphonenumber);
+
 		           });
 </script>
