--- a/views/travel.mustache
+++ b/views/travel.mustache
@@ -13,11 +13,13 @@
 				<label>
 					<input type="radio" id="offer" name="ridetype" value="offer"checked>
 					<img src="./views/Driver.gif" width="150px" />
+					<br>Driver
 				</label>&nbsp;&nbsp;&nbsp;
 
 				<label>
 					<input type="radio" id="request" name="ridetype" value="request" >
 					<img src="./views/Rider.gif" width="150px" />
+				<p>Rider</p>
 				</label><br /><br />
 
 				<div id="startSearchContainer" class="form-group" >
