--- a/views/header.mustache
+++ b/views/header.mustache
@@ -7,8 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- BootStrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+-->
 
+
+<link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -53,7 +56,6 @@
     }
 
     .card {
-      background-color: white;
       padding: 20px;
     }
 
@@ -143,11 +145,12 @@
     }
 
   </style>
-  <title>Truepool Carpool</title>
+  <title>Carpool Me</title>
 </head>
 
 <body>
 
   <div class="header">
     <a href="/"><img id="logo" src="./views/logo.gif" /></a>
+	<link rel="icon" type="image/png" href="/views/logo.gif">
   </div>
